--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,3 +108,25 @@ ul > li {
 ul {
   list-style-type: disc;
 }
+
+.iframe-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 26.25%;
+  margin: auto;
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 1000px;
+  max-height: 562.5px;
+  margin: auto;
+}
